<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".DetailedScreen">

    <TextView
        android:id="@+id/daysOfTheWeek"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="524dp"
        android:hint="Day Of The Week"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/clearButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/detailScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/detailedScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculate"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/daysOfTheWeek" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/calculateAverage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailScreen"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/minTEMP"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:hint="#####"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/maxTEMP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/daysOfTheWeek" />

    <EditText
        android:id="@+id/maxTEMP"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="#####"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/highAVE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/minTEMP" />

    <TextView
        android:id="@+id/aveHighTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="30dp"
        android:text="@string/aveHighTemp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTEMP" />

    <TextView
        android:id="@+id/aveLowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="30dp"
        android:text="@string/aveLowTemp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTEMP"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/highAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="50dp"
        android:hint="##"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aveLowTemp"
        app:layout_constraintTop_toBottomOf="@+id/maxTEMP" />

    <TextView
        android:id="@+id/lowAVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="30dp"
        android:hint="##"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aveLowTemp"
        app:layout_constraintTop_toBottomOf="@+id/highAVE" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/prompt1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/minTEMP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysOfTheWeek" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="90dp"
        android:text="@string/prompt2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aveHighTemp"
        app:layout_constraintEnd_toStartOf="@+id/maxTEMP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="93dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toTopOf="@+id/daysOfTheWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weatherapplogo" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enterButton"
        android:backgroundTint="@color/darkerBlue"
        app:layout_constraintBottom_toTopOf="@+id/aveHighTemp"
        app:layout_constraintEnd_toStartOf="@+id/highAVE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="13dp"
        android:text="@string/exitButton"
        android:backgroundTint="@color/darkerBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailScreen" />
</androidx.constraintlayout.widget.ConstraintLayout>